--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" minlength="2" maxlength="20" pattern="^[А-ЯЁ][а-яё]+(?:-[А-ЯЁ][а-яё]+)?" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="[A-Z]?[a-z,0-9,\-,\_,\.]+\b\@\w+\.\w+" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="" minlength="" maxlength="18"  required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="^[+0-9]*[(]{0,1}[0-9]{1,4}[)]{0,1}[-\s\./0-9]*$" minlength="" maxlength="18"  required/>
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^((http)|(https)):\/\/(www\.)?(((\d{3}\.?){4})|(\w+\.\w+))(\:\d{2,5})?(\/[0-9,\/,a-z,A-Z,\-,\_]+)\#?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
                 </fieldset>
             </form>
         </div>
-    </main>     
+    </main>
 </body>
 </html>
