--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                         <input class="form__input" type="text" name="name" minlength="2" maxlength="20" pattern="^[А-ЯЁ][а-яё]+(?:-[А-ЯЁ][а-яё]+)?" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="(\w+[.,-]?)+@([a-z]+)\.([a-z]+)" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="([\w+,\.]+-?(\w+)?)@[\w+,-]+\.(\w+[^-])(\w+)?" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="^((\d)|(\+\d))((\s?((\d{10})|(\d{3}\-\d{3}(\-\d{2}){2})))|(\([\d]{1,3}\)\s?\d{3}(\-\d{2}){2}))" maxlength="18"  required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="^((\d)|(\+\d))((\s?((\d{10})|(\d{3}-\d{3}(-\d{2}){2})))|(\([\d]{1,3}\)\s?\d{3}(-\d{2}){2}))" maxlength="18"  required/>
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="^(http|https)\:\/\/(www\.)?(([\w+,\-]+\.[a-z]+)|((\d{1,3}\.){3}\d{1,3}))(\:\d{2,5})?([\w+,\/,\.]*)?\#?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^(http|https):\/\/(www\.)?(([\w+,-]+\.[a-z]+)|((\d{1,3}\.){3}\d{1,3}))(:\d{2,5})?((([\w+,/,:]+))|(\.\w+)+)(#)?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
