--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="^(http|https):\/\/(www\.)?(([\w+,-]+\.[a-z]+)|((\d{1,3}\.){3}\d{1,3}))(:\d{2,5})?((([\w+,/,:]+))|(\.\w+)+)(#)?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^(http|https):\/\/(www\.)?(([\w+,-]+\.[a-z]+)|(((([0-9]|[01][0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3})([01][0-9][0-9]|(2[0-4][0-9]|25[0-5])|[0-9])))(:\d{2,5})?((((\w+[/]?)+)|((:\w+[/,]?)+))|(\.\w+)+)(#)?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
