--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="^(https?):\/\/(www\.)?(([\w+,-]+\.([\w+,-]+\.)?[a-z]+)|(((([0-9]|[01][0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3})([01][0-9][0-9]|(2[0-4][0-9]|25[0-5])|[0-9])))(:((6553[0-5])|(655[0-2][0-9])|(65[0-4][0-9]{2})|(6[0-4][0-9]{3})|([1-5][0-9]{4})|([1-9][0-9]{1,3})|[1-9]{2}))?((((\w+[/]?)+)|((:\d{1,4}[/]?)+))|(\.\w+)+)(#)?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^(https?):\/\/(www\.)?(([\w+,-]+\.([\w+,-]+\.)?[a-z]+)|(((([0-9]|[01][0-9][0-9]|2[0-4][0-9]|25[0-5])\.){3}[0-9])))(:((6553[0-5])|(655[0-2][0-9])|(65[0-4][0-9]{2})|(6[0-4][0-9]{3})|([1-5][0-9]{4})|([1-9][0-9]{1,3})|[1-9]{2}))?((\/)?(((\w+[/]?)+)|((:\d{1,4}[/]?)+))|(\.\w+)+)?(\/)?(#)?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
